# dirhash

./: Cargo.toml  Makefile
src/: main.rs
