[package]
name = "dirhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
humansize = "2.1.3"
indicatif = "0.17.8"
num_cpus = "1.16.0"
sha256 = "1.5.0"
tokio = { version = "1.38.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
walkdir = "2.5.0"
